--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "9.0.0"
+    "@types/uuid": "9.0.0",
+    "utility-types": "^3.10.0"
   }
 }
