--- a/package.json
+++ b/package.json
@@ -1,52 +1,54 @@
 {
-  "name": "react-backgammon",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@redux-devtools/extension": "^3.2.4",
-    "@reduxjs/toolkit": "^1.9.1",
-    "@testing-library/jest-dom": "5.16.5",
-    "@testing-library/react": "13.4.0",
-    "@testing-library/user-event": "13.5.0",
-    "@types/jest": "27.5.2",
-    "@types/node": "16.18.11",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "sass": "1.57.1",
-    "typescript": "4.9.4",
-    "web-vitals": "2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/uuid": "9.0.0",
-    "utility-types": "^3.10.0"
-  }
+	"name": "react-backgammon",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@redux-devtools/extension": "^3.2.4",
+		"@reduxjs/toolkit": "^1.9.1",
+		"@testing-library/jest-dom": "5.16.5",
+		"@testing-library/react": "13.4.0",
+		"@testing-library/user-event": "13.5.0",
+		"@types/jest": "27.5.2",
+		"@types/node": "16.18.11",
+		"@types/react": "18.0.26",
+		"@types/react-dom": "18.0.10",
+		"@wordpress/prettier-config": "^2.8.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.0.5",
+		"react-scripts": "5.0.1",
+		"redux": "^4.2.0",
+		"sass": "1.57.1",
+		"typescript": "4.9.4",
+		"web-vitals": "2.1.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/uuid": "9.0.0",
+		"prettier": "npm:wp-prettier@2.6.2",
+		"utility-types": "^3.10.0"
+	}
 }
