--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
-		"react-scripts": "5.0.1",
+		"react-scripts": "^5.0.1",
 		"redux": "^4.2.0",
 		"sass": "1.57.1",
 		"typescript": "4.9.4",
