--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 	},
 	"devDependencies": {
 		"@types/uuid": "9.0.0",
+		"classnames": "^2.3.2",
 		"prettier": "npm:wp-prettier@2.6.2",
 		"utility-types": "^3.10.0"
 	}
